--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "@tailwindcss/forms": "^0.3.2",
     "core-js": "^3.9.1",
+    "eslint-plugin-modules-newline": "^0.0.6",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
