--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/firebase": "^7.5.0",
     "@tailwindcss/forms": "^0.3.2",
     "core-js": "^3.9.1",
     "eslint-plugin-modules-newline": "^0.0.6",
+    "firebase": "^8.6.3",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
