--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/firebase": "^7.5.0",
     "@tailwindcss/forms": "^0.3.2",
+    "@vue-hero-icons/solid": "^1.7.2",
     "core-js": "^3.9.1",
     "eslint-plugin-modules-newline": "^0.0.6",
     "firebase": "^8.6.3",
