--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint": "yarn lint:js && yarn lint:style"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.2.0",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/firebase": "^7.5.0",
     "@tailwindcss/forms": "^0.3.2",
+    "@vue-hero-icons/outline": "^1.7.2",
     "@vue-hero-icons/solid": "^1.7.2",
     "core-js": "^3.9.1",
     "eslint-plugin-modules-newline": "^0.0.6",
